# File-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Downloader.py  README.md  client.py  docker-compose.yml  downloader.py  logger.py  main.py  pyproject.toml  requirements.txt  zip_extractor.py
app/: api_client.py  config.py  downloader.py  exceptions.py  jobs.py  logger.py  main.py  models.py  rate_limiter.py  schemas.py  stats.py  storage.py  timeutils.py  zip_extractor.py
app/web/: routes.py
app/web/static/: app.css  app.js
app/web/templates/: base.html  files.html  index.html
tests/: conftest.py  test_api_client.py  test_client.py  test_downloader.py  test_jobs.py  test_logger.py  test_rate_limiter.py  test_stats.py  test_storage.py  test_web.py  test_zip_extractor.py
