[project]
name = "file-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "requests>=2.34.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.4",
    "sqlalchemy>=2.0.36",
    "tzdata>=2024.2; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "httpx>=0.28.0",
    "httpx2>=2.5.0",
]
